@@ -12,8 +12,13 @@
 ;;
 ;; Odd-numbered 'development' releases:
 ;;    <v>-<r>.*: The only branch for version <v>.<r>
+;;    3-3-memory.*: The 3-3 subbranch to track all memory related changes,
+;;                   for later backporting into 3.2
+;; Dead branches:
 ;;    3-3-structs.*: The 3-3 subbranch for 'struct' re-development,
 ;;                   branched off 3-3.294, merged back in in 3-3.344.
+;;
+;;--------------------------------------------------------------------------
 ;;
 ;; TODO: warnf()s should go to the master as well.
 ;; TODO: Add a predefine when using MSDOS-FS, for the mudlib.
@@ -47,12 +52,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 383)
-(Parent-Version lpmud 3-3 382)
-(Version-Log "Swapping struct values no longer changes the refcount of the type objects.")
+(Project-Version lpmud 3-3 384)
+(Parent-Version lpmud 3-3 383)
+(Version-Log "Removed a memory leak in the warnf() routine.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 29 Jan 2003 21:30:58 -0700")
+(Checkin-Time "Thu, 30 Jan 2003 16:29:00 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -89,7 +94,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.58 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.446 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.447 644))
   (HISTORY (lpmud/f/49_HISTORY 1.298 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -177,7 +182,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.8 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.35 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.17 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.18 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.46 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.13 644))
@@ -263,7 +268,7 @@
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.3 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.98 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.99 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.13 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.64 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.3 644))
